[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main Menu.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 1 )

[node name="Main Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Beginner" type="Button" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 112.0
size_flags_vertical = 3
text = "Beginner"

[node name="Intermediate" type="Button" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 1024.0
margin_bottom = 228.0
size_flags_vertical = 3
text = "Intermediate"

[node name="Accomplished" type="Button" parent="VBoxContainer"]
margin_top = 232.0
margin_right = 1024.0
margin_bottom = 344.0
size_flags_vertical = 3
text = "Accomplished"

[node name="Advanced" type="Button" parent="VBoxContainer"]
margin_top = 348.0
margin_right = 1024.0
margin_bottom = 460.0
size_flags_vertical = 3
text = "Advanced"

[node name="Professional" type="Button" parent="VBoxContainer"]
margin_top = 464.0
margin_right = 1024.0
margin_bottom = 576.0
size_flags_vertical = 3
text = "Professional"

[node name="Clear" type="Button" parent="VBoxContainer"]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/hover = SubResource( 1 )
text = "Clear"

[connection signal="pressed" from="VBoxContainer/Beginner" to="." method="_on_Beginner_pressed"]
[connection signal="pressed" from="VBoxContainer/Intermediate" to="." method="_on_Intermediate_pressed"]
[connection signal="pressed" from="VBoxContainer/Accomplished" to="." method="_on_Accomplished_pressed"]
[connection signal="pressed" from="VBoxContainer/Advanced" to="." method="_on_Advanced_pressed"]
[connection signal="pressed" from="VBoxContainer/Professional" to="." method="_on_Professional_pressed"]
[connection signal="pressed" from="VBoxContainer/Clear" to="." method="_on_Clear_pressed"]
